5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1793_3134.log
== TEST (2019-05-30 18:17:01) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:48) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, n 2))
-- ERROR:
File "XXXX", line 15
    print(round(coeficiente, n 2))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:09) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:32:37) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.397408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:44) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:06) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente,n 2))
-- ERROR:
File "XXXX", line 15
    print(round(coeficiente,n 2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:33) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:03) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.503212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:03) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= n       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:43:57) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= 2       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:04) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= 2       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:44:07) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 # variavel contadora
numerador=1          # acomula produtos notas * creditos
denominador= 2       # acomula os creditos

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.434646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:50:21) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:50:24) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i < size(notas)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.455824
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:26) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:51:30) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + notas[i] * cred[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.554382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:56) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:51:58) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + cred[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.368193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:07) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:52:09) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + 1
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.383997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:29) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + n
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:52:32) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + n
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- EXECUTION TIME:
0.386619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:32) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + n
	
	coeficiente= numerador / denominador
	print(round(coeficiente, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:56) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + n
	
	coeficiente= numerador / denominador
	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:59) 
-- CODE:
from numpy import*
#leitura dos vetores
notas= array(eval(input("informe as notas: ")))
cred= array(eval(input(" informe os creditos: ")))
i= 0                 
numerador=1          
denominador=n       

while(i > size(cred)):
	numerador= numerador + cred[i] * notas[i]
	denominador= denominador + notas[i]
	i= i + n
	
	coeficiente= numerador / denominador
	print(round(m, 2))
-- EXECUTION TIME:
0.512782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 4, in <module>
    cred= array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:11) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:14) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- EXECUTION TIME:
0.423442
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:

-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:14) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:14) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:15) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:15) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:15) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:16) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:16) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:16) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- EXECUTION TIME:
0.412955
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:

-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
informe as notas:
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:20) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- EXECUTION TIME:
0.640885
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:

-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
informe as notas:
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
informe as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:21) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- EXECUTION TIME:
2.22729
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
informe as notas:
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
informe as notas:
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
informe as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:21) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- EXECUTION TIME:
2.68954
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
informe as notas:
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
informe as notas:
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
informe as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:21) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=0

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	m=((p1))**6/size(n)

	print(round(m, 2))
-- EXECUTION TIME:
2.47973
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
informe as notas:
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
informe as notas:
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
informe as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:04) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	n=((p1))**6/size(n)

	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:07:06) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i + 1
	n=((p1))**6/size(n)

	print(round(n, 2))
-- EXECUTION TIME:
0.425225
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:

-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:30) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)

	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:32) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)

	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:07:32) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i > size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)

	print(round(n, 2))
-- EXECUTION TIME:
0.333433
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:

-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:32) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:33) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:35) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:08:35) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/6
	i= i - 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.624859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/6
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:08) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:08) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.504168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:10) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:11) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**6/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.353331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:30) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**n/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:32) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**n/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:33) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**n/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.404213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:56) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**2/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:58) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p1))**2/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.437356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:26) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p2))**2/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:28) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p2))**2/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:11:28) 
-- CODE:
from numpy import*
#leitura dos vetores
n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p2))**2/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.593039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:18:33) 
-- CODE:
from numpy import*

n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p2))**2/size(n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:35) 
-- CODE:
from numpy import*

n= array(eval(input("informe as notas: ")))
i=0
p1=1
p2=2

while(i < size(n)):
	p1= p1+ ([i])**1/2
	i= i + 1
	n=((p2))**2/size(n)
	print(round(n, 2))
-- EXECUTION TIME:
0.37603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 9, in <module>
    p1= p1+ ([i])**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'list' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:33) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/)
	print(round(n, 2))
-- ERROR:
File "XXXX", line 9
    M=m**(1/)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:35) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/)
	print(round(n, 2))
-- ERROR:
File "XXXX", line 9
    M=m**(1/)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:57) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
	print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:22:59) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
	print(round(n, 2))
-- EXECUTION TIME:
0.500983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:46) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
	print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:48) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
	print(round(M, 2))
-- EXECUTION TIME:
0.431448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:24) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:26) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:24:26) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
print(round(M, 2))
-- EXECUTION TIME:
0.447293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:24:27) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i < size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
print(round(M, 2))
-- EXECUTION TIME:
0.468965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:24:50) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:24:52) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m= m+ (v[i])
	i= i + 1
	M=m**(1/n)
print(round(M, 2))
-- EXECUTION TIME:
0.510203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:25:33) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)) :
	m= m+ (v[i])
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:25:35) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)) :
	m= m+ (v[i])
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- EXECUTION TIME:
0.461264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:44) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m + (v[i])
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:17) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m + (v[i])
	i= i + 1
M=m**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:34:20) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m + (v[i])
	i= i + 1
M=m**(1/2)
print(round(M, 2))
-- EXECUTION TIME:
0.640835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:46) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m + (v[i])
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:13) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:38:30) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n**1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:32) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n**1/2)
print(round(M, 2))
-- EXECUTION TIME:
0.448853
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:14) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)**1/2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:16) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)**1/2
print(round(M, 2))
-- EXECUTION TIME:
0.591946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:40:00) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:03) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)
print(round(M, 2))
-- EXECUTION TIME:
0.622136
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:40:23) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1/2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:25) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1/2
print(round(M, 2))
-- EXECUTION TIME:
0.37678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:40:54) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1,2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:40:56) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1,2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:57) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1,2
print(round(M, 2))
-- EXECUTION TIME:
0.522661
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:59) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1,2
print(round(M, 2))
-- EXECUTION TIME:
0.490875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:47) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M= (m**(1/n))**1/2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:41:49) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M= (m**(1/n))**1/2
print(round(M, 2))
-- EXECUTION TIME:
0.48656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:42:22) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)**1/2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:42:24) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)**1/2
print(round(M, 2))
-- EXECUTION TIME:
0.57953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:17) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)sinze 1/2
print(round(M, 2))
-- ERROR:
File "XXXX", line 9
    M=m**(1/n)sinze 1/2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:48) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)sinze(1/2)
print(round(M, 2))
-- ERROR:
File "XXXX", line 9
    M=m**(1/n)sinze(1/2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:59) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:01) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m**(1/n)**(1/2)
print(round(M, 2))
-- EXECUTION TIME:
0.464919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:46:21) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1/2
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:24) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**1/2
print(round(M, 2))
-- EXECUTION TIME:
0.362864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:53) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:55) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**(1/2)
print(round(M, 2))
-- EXECUTION TIME:
0.415093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3134/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:48:00) 
-- CODE:
from numpy import*
n= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:48:49) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=m(1/n)**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:28) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=(1/n)**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:37) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=(1/n)**(1/2)
print(round(M, 2))
-- EXECUTION TIME:
0.530694
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
0.38
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
0.41
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
0.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:44) 
-- CODE:
from numpy import*
v= array(eval(input("digite n numeros: ")), dtype=float)
n=size(v)
i=0
m=0
while(i<size(v)):
	m=m + (v[i])**2
	i= i + 1
M=(1/n)**(1/2)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
